--- a/contactmanager/angular.json
+++ b/contactmanager/angular.json
@@ -47,7 +47,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ]
           },
           "configurations": {
@@ -100,7 +101,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ]
           }
         }
@@ -108,6 +110,6 @@
     }
   },
   "cli": {
-    "analytics": "a43b1697-2609-401b-9387-620cb9281338"
+    "analytics": "08e6e8a8-8f73-4b58-bce3-856d8663261f"
   }
 }
