--- a/contactmanager/angular.json
+++ b/contactmanager/angular.json
@@ -41,9 +41,12 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
+                "src/favicon.ico",
+                "src/assets",
               {
                 "glob": "**/*",
-                "input": "public"
+                 "input": "src/uploads",
+                 "output": "/uploads"
               }
             ],
             "styles": [
